// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-member-type-siblings should get sibling member types at root level 1`] = `
{
  "content": [
    {
      "text": "{"totalBefore":0,"totalAfter":3,"items":[{"icon":"icon-user","name":"_Test Sibling 1 MemberType","id":"00000000-0000-0000-0000-000000000000","parent":null,"flags":[],"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-member-type-siblings should handle non-existent target 1`] = `
{
  "content": [
    {
      "text": "Error using get-member-type-siblings:
{
  "message": "Request failed with status code 404",
  "response": ""
}",
      "type": "text",
    },
  ],
}
`;
